force-app/main/default/objects/RepairProcedure__c/RepairProcedure__c.object-meta.xml
<CustomObject>
    <label>RepairProcedure</label>
    <nameField>
        <label>RepairProcedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RepairProcedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>