force-app/main/default/objects/RepairProcedure__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <length>60</length>
    <type>Text</type>
</CustomField>